--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,7 +10,7 @@ name: occ_seat
 
 on:
   schedule:
-    - cron: "50 5 * * *"
+    - cron: "54 5 * * *"
   
 
 permissions:
@@ -29,14 +29,15 @@ jobs:
         python-version: '3.11'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install build
-    - name: Build package
-      run: pip install requests
-    - name: Publish package
-    - name: occ_set
-      run: python ./main.py
-      # uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      # with:
-      #   user: __token__
-      #   password: ${{ secrets.PYPI_API_TOKEN }}
+        python -c "print("hello world")"
+        # python -m pip install --upgrade pip
+        # pip install build
+    # - name: Build package
+    #   run: pip install requests
+    # - name: Publish package
+    # - name: occ_set
+    #   run: python ./main.py
+    #   uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+    #   with:
+    #     user: __token__
+    #     password: ${{ secrets.PYPI_API_TOKEN }}
