--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,27 +17,19 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
-
+  occ_seat:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.11'
-    - name: Install dependencies
-      run: |
-        python -c "print("hello world")"
-        # python -m pip install --upgrade pip
-        # pip install build
-    # - name: Build package
-    #   run: pip install requests
-    # - name: Publish package
-    # - name: occ_set
-    #   run: python ./main.py
-    #   uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-    #   with:
-    #     user: __token__
-    #     password: ${{ secrets.PYPI_API_TOKEN }}
+      - uses: actions/checkout@v4
+      - name: Set up Python
+
+        uses: actions/setup-python@v5
+        with:
+        
+          python-version: '3.x'
+
+          architecture: 'x64'
+
+      - name: Display Python version
+        run: python -c "import sys; print(sys.version)"
+    
