--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,16 +21,13 @@ jobs:
   occ_seat:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-
-        uses: actions/setup-python@v5
-        with:
-        
-          python-version: '3.x'
-
-          architecture: 'x64'
-
-      - name: Display Python version
-        run: python -c "print("Hello world")"
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests
     
