--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Install dependencies
       run: |
         # python -m pip install --upgrade pip
-        # pip install requests
+        pip install requests
         python main.py
     
