--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,7 +28,6 @@ jobs:
         python-version: '3.8'
     - name: Install dependencies
       run: |
-        # python -m pip install --upgrade pip
+        python -m pip install --upgrade pip
         pip install requests
-        python main.py
     
