--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,4 +30,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests
+      run: |
+        python main.py
     
