--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,16 +21,13 @@ jobs:
   occ_seat:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: 'Set up Python'
+      uses: actions/setup-python@v1
       with:
-        python-version: '3.8'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests
-    - name: start
-      run: |
-        python main.py
-    
+        python-version: 3.7
+    - name: 'Install requirements'
+      run: pip install requests
+    - name: 'Working'
+      run: python ./main.py
