--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,33 +1,25 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: occ_seat
+name: 'GitHub Actions CSDN Email Bot'
 
 on:
-  schedule:
-    - cron: "0 3 * * *"
   push:
-    branches: [ main ]
-
-permissions:
-  contents: read
+    branches: 
+      - master
+  # schedule:
+  #   - cron: '0 14 * * *'
 
 jobs:
-  occ_seat:
+  csdn-emailbot:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: 'Set up Python'
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-    - name: 'Install requirements'
-      run: pip install requests
-    - name: 'Working'
-      run: python ./main.py
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: 'Set up Python'
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      # - name: 'Install dependencies'
+      #   run: python -m pip install --upgrade pip
+      - name: 'Install requirements'
+        run: pip install requests
+      - name: 'Working'
+        run: python main.py
