--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,12 +1,8 @@
 name: 'GitHub Actions CSDN Email Bot'
 
 on:
-  push:
-    branches: 
-      - master
-  # schedule:
-  #   - cron: '0 14 * * *'
-
+  [push]
+  
 jobs:
   csdn-emailbot:
     runs-on: ubuntu-latest
