--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,7 +1,10 @@
 name: 'GitHub Actions CSDN Email Bot'
 
 on:
-  [push]
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '0 3 * * *'
+  push:
   
 jobs:
   csdn-emailbot:
